Added spinner for better UI

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -17,6 +17,7 @@ dependencies = [
   "questionary>=2.0",
   "openpyxl>=3.0",  # for Excel export support
   "pyarrow>=14.0",  # optional, for fast CSV/Parquet handling
+  "halo>=0.0.31",
 ]
 
 classifiers = [
