--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,7 +4,7 @@ build-backend = "setuptools.build_meta"
 
 [project]
 name = "cleany-cli"
-version = "0.2.0a"
+version = "0.2.0"
 description = "Interactive CLI tool to clean and prune tabular data files"
 authors = [
   { name = "espehon", email = "espehon@gmail.com" }
